syntax = "proto3";
package m2g.pb;

message TurnBasedServerCommand {}

message TurnBasedClientCommand {}
